deploy: 555beb77fe43fd60417a0f47bb1cd24c723a3d1c

--- a/exercises/shakespeare.html
+++ b/exercises/shakespeare.html
@@ -808,7 +808,7 @@ Sentences: [[&#39;[&#39;, &#39;The&#39;, &#39;Tragedie&#39;, &#39;of&#39;, &#39;
     <div class="container">
       <p>
         
-          By Juha Teuho<br/>
+          By Juha Teuho & Prashant Mahato<br/>
         
           <div class="extra_footer">
             <div>
