--- a/exercises/wordcloud.html
+++ b/exercises/wordcloud.html
@@ -675,7 +675,7 @@
     <div class="container">
       <p>
         
-          By Juha Teuho<br/>
+          By Juha Teuho & Prashant Mahato<br/>
         
           <div class="extra_footer">
             <div>
