--- a/genindex.html
+++ b/genindex.html
@@ -210,7 +210,7 @@
     <div class="container">
       <p>
         
-          By Juha Teuho<br/>
+          By Juha Teuho & Prashant Mahato<br/>
         
           <div class="extra_footer">
             <div>
