--- a/intro.html
+++ b/intro.html
@@ -248,7 +248,7 @@
     <div class="container">
       <p>
         
-          By Juha Teuho<br/>
+          By Juha Teuho & Prashant Mahato<br/>
         
           <div class="extra_footer">
             <div>
