--- a/search.html
+++ b/search.html
@@ -230,7 +230,7 @@
     <div class="container">
       <p>
         
-          By Juha Teuho<br/>
+          By Juha Teuho & Prashant Mahato<br/>
         
           <div class="extra_footer">
             <div>
