--- a/exercises/text_classification.html
+++ b/exercises/text_classification.html
@@ -504,7 +504,7 @@ neg
     <div class="container">
       <p>
         
-          By Juha Teuho & Prashant Mahato<br/>
+          By HIP Education and Open Data Team<br/>
         
           <div class="extra_footer">
             <div>
