--- a/intro.html
+++ b/intro.html
@@ -282,7 +282,7 @@ If you wish to modify and use the exercise notebook yourself, follow the instruc
     <div class="container">
       <p>
         
-          By Juha Teuho & Prashant Mahato<br/>
+          By HIP Education and Open Data Team<br/>
         
           <div class="extra_footer">
             <div>
