--- a/exercises/shakespeare.html
+++ b/exercises/shakespeare.html
@@ -815,7 +815,7 @@ Sentences: [[&#39;[&#39;, &#39;The&#39;, &#39;Tragedie&#39;, &#39;of&#39;, &#39;
     <div class="container">
       <p>
         
-          By Juha Teuho & Prashant Mahato<br/>
+          By HIP Education and Open Data Team<br/>
         
           <div class="extra_footer">
             <div>
