--- a/exercises/wordcloud.html
+++ b/exercises/wordcloud.html
@@ -684,7 +684,7 @@
     <div class="container">
       <p>
         
-          By Juha Teuho & Prashant Mahato<br/>
+          By HIP Education and Open Data Team<br/>
         
           <div class="extra_footer">
             <div>
