--- a/search.html
+++ b/search.html
@@ -236,7 +236,7 @@
     <div class="container">
       <p>
         
-          By Juha Teuho & Prashant Mahato<br/>
+          By HIP Education and Open Data Team<br/>
         
           <div class="extra_footer">
             <div>
